QGDS-373 paragraph spacing fix

--- a/src/css/qld-type.scss
+++ b/src/css/qld-type.scss
@@ -6,9 +6,8 @@ body {
 
 .qld-content-body {
   p {
-    margin-bottom: 1.25rem;
+    margin-bottom: 1rem;
   }
-
   ul,
   ol,
   p {
